Only tests that actually need ldap will extend AbstractLdapTestUnit
Refactor to clear out dependencies on apacheDS since it does not
play nice together with windows.